  * Moloch >= 1.0.0 requires NodeJS 8.x
  * Moloch >= 0.20.0 requires NodeJS 6.x
  * Moloch >= 0.18.1 requires NodeJS 4.x

NOTICE: Restart wiseService before capture when upgrading
NOTICE: Cross-cluster Shortcuts require you to not restart all your viewers at once after upgrading

3.0.1 2021/09/xx
 - all - support float field type
 - capture - s3 writer uses IMDSv2 (thanks fj604)
 - viewer - stop upload menu showing up when empty command
 - release - much improved arkime_config_interfaces.sh (thanks arkaØm)

3.0.0 2021/08/18
  - BREAKING - elasticsearch - ES 7.10.0 or later required
  - BREAKING - if not using a ES prefix, the prefix arkime_ will now be used
  - BREAKING - multies - multiESNodes requires a name: and prefix: attribute per entry
  - BREAKING - wise - custom sources will need to be modified
  - BREAKING - wise - redis urls have a new standard format
  - BREAKING - wise - for json data keyColumn has been renamed keyPath
  - BREAKING - wise - now lower case lotermfield and upper case uptermfield fields
  - BREAKING - capture - override-ips will no longer have leading 0s for ASN
  - release - curl 7.78.0, node 14.17.5, glib 2.68.3, yara 4.0.2, lua 5.3.6, maxmind 1.4.3, nghttp2 1.44.0
  - capture - search for GeoIP files first in /var/lib/GeoIP
  - capture - fixed possible ABR with time parsing
  - capture - fixed memory leak with dns bad hostname parsing
  - capture - new classifier for nfs and several rpc protocols
  - capture - handle larger oracle connect msgs better
  - capture - parse small http basic auth headers correctly
  - capture - rule matches can now be logged
  - capture - new localPcapIndex setting to enable pcap index on capture node instead of ES
  - capture - write long open tcp sessions every tcpSaveTimeout even if no syn
  - capture - fixed possible memory corruption with --flush option
  - capture - check max packet length in more places
  - capture - parse proxy-authorization header (PR #1651)