@@ -16,6 +16,10 @@
                "packets" : 5,
                "port" : 3306
             },
+            "dstDscp" : [
+               2
+            ],
+            "dstDscpCnt" : 1,
             "dstOui" : [
                "Officially Xerox, but 0:0:0:0:0:0 is more common"
             ],
@@ -81,6 +85,10 @@
                "packets" : 5,
                "port" : 42418
             },
+            "srcDscp" : [
+               2
+            ],
+            "srcDscpCnt" : 1,
             "srcOui" : [
                "Officially Xerox, but 0:0:0:0:0:0 is more common"
             ],
