@@ -16,6 +16,10 @@
                "packets" : 1,
                "port" : 3306
             },
+            "dstDscp" : [
+               2
+            ],
+            "dstDscpCnt" : 1,
             "dstOui" : [
                "Juniper Networks"
             ],
