@@ -25,6 +25,7 @@ NOTICE: Cross-cluster Shortcuts require you to not restart all your viewers at o
 3.0.1 2021/09/xx
  - all - support float field type
  - capture - s3 writer uses IMDSv2 (thanks fj604)
+ - capture - dscp src/dst (issue #1626)
  - viewer - stop upload menu showing up when empty command
  - release - much improved arkime_config_interfaces.sh (thanks arkaØm)
 
